# GDLauncher-Carbon

./: .gitignore  Cargo.toml  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  rust_gen_models.js  tsconfig.json  turbo.json
.github/workflows/: all_os.yml
apps/desktop/: .electron-builder.config.cjs  .prettierignore  README.md  package.json  playwright.config.ts  tsconfig.json
apps/desktop/__tests__/: init.spec.ts  tests_helpers.ts
apps/desktop/scripts/: build.mjs  cleanReleaseFolder.mjs  monkeypatchVersion.mjs  watch.mjs
apps/website/: astro.config.mjs  tailwind.config.cjs
apps/website/src/pages/: index.astro
apps/website/src/styles/: global.css
crates/carbon_app/: Cargo.toml
crates/carbon_app/src/: base_api_override.rs  cache_middleware.rs  iridium_client.rs  main.rs
crates/carbon_app/src/api/: account.rs  keys.rs  metrics.rs  mod.rs  settings.rs
crates/carbon_app/src/domain/: java.rs  metrics.rs  mod.rs  runtime_path.rs
crates/carbon_app/src/managers/: download.rs  mod.rs  prisma_client.rs
crates/carbon_app/src/util/: base_api.rs  mod.rs
crates/carbon_frontend/: Cargo.toml
crates/carbon_frontend/src/: lib.rs
crates/carbon_frontend/src/curseforge/: manifest.rs
crates/carbon_parsing/: Cargo.toml
crates/carbon_parsing/src/: lib.rs  log.rs  tests.rs
crates/carbon_platforms/: Cargo.toml
crates/carbon_platforms/src/: lib.rs
crates/carbon_repos/: Cargo.toml
crates/carbon_repos/prisma/: schema.prisma
crates/carbon_repos/src/: lib.rs  models.rs  pcr.rs
crates/carbon_rt_path/: Cargo.toml
(+65 files in other folders)
